8245511: G1 adaptive IHOP does not account for reclamation of humongous objects by young GC

Discount humongous object eager reclaim in IHOP allocation rate.

Reviewed-by: tschatzl, sjohanss